--- a/java EE/DAO/src/database.properties
+++ b/java EE/DAO/src/database.properties
@@ -1,3 +1,3 @@
-URL=jdbc:mysql://localhost:3306/ShoppingStreet
+URL=jdbc:mysql://localhost:3306/shoppingstreet?serverTimezone=UTC
 USERNAME=root
-PWD=ZZzs12138
+PWD=zzzs12138
