--- a/java EE/竞拍/day01/oas/src/database.properties
+++ b/java EE/竞拍/day01/oas/src/database.properties
@@ -1,3 +1,3 @@
-URL=jdbc:mysql://localhost:3306/ShoppingStreet?serverTimezone=UTC
+URL=jdbc:mysql://localhost:3306/online_auction_system?serverTimezone=UTC
 USERNAME=root
-PWD=ZZzs12138
+PWD=zzzs12138
